--- a/styles/style.css
+++ b/styles/style.css
@@ -87,6 +87,7 @@ li {
 .material-icons.pencil {
 	color: #0986b4;
 	font-size: 18px;
+	cursor: pointer;
 }
 .name-customer {
 	margin-top: 14px;
@@ -118,5 +119,9 @@ li {
 	margin-left: 26px;
 	margin-right: 4px;
 	color: #0b84a3;
+}
+/*Editing*/
+.input-phone {
+	max-width: 160px
 }
 
