--- a/styles/style.css
+++ b/styles/style.css
@@ -92,12 +92,11 @@ input {
 	font-size: 18px;
 	cursor: pointer;
 }
-.name-customer {
+.left-part > .name-customer {
 	margin-top: 14px;
 	color: #1e92c3;
 	font-weight: bold;
 	margin-bottom: 2px;
-	color: #888888;
 }
 .address {
 	margin-right: 10px;
@@ -123,6 +122,11 @@ input {
 	margin-right: 4px;
 	color: #0b84a3;
 }
+.left-part {
+	border-bottom: 1px solid #5a8f97;
+	padding: 5px;
+}
+
 /*Editing*/
 .input-phone {
 	max-width: 160px
@@ -144,4 +148,7 @@ input {
     -o-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
     transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 }
+
+/*Pagination*/
+
 
